font-awesome directory readded correctly, images visible

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,11 @@ h2 {
 #user-language {
   background: white;
   height: 2rem;
+  flex: 1 100%;
+  padding: .5rem;
+  margin: .5rem;
+  border: 2px solid #C1C1C1;
+  border-radius: 3px;
 }
 
 #user-comment {
